<resources>
    <string name="app_name">NktnsToDo</string>

    <string name="tab_item_all">все</string>
    <string name="tab_item_today">сегодня</string>
    <string name="tab_item_catalogs">списки дел</string>

    <string name="create_task_name_default">Новая задача</string>
    <string name="create_task_description_default">Описание</string>
    <string name="task_card_date">дата</string>
    <string name="task_card_time">время</string>
    <string name="task_card_catalog">список</string>
    <string name="task_card_delete">удалить</string>
    <string name="task_card_add_btn">добавить</string>
    <string name="task_card_save_btn">сохранить</string>

    <string name="hide_function">Скрыть выполненные задачи</string>
    <string name="catalog_editor_add_btn">Сохранить список</string>
    <string name="catalog_editor_save_btn">Изменить список</string>
    <string name="catalog_editor_delete">Удалить</string>
    <string name="create_catalog_name_default">Название списка</string>
    <string name="catalog_editor_title_add">Создать список</string>
    <string name="catalog_editor_title_change">Изменить список</string>

    <string name="catalog_options_archive">Архив</string>

    <string name="notification_title">Тест уведомление</string>
    <string name="notification_subtitle">Текст уведомления</string>
    <string name="button_next_splash">Пропустить</string>
    <string name="desc_splash_second">Включите напоминания, и приложение не даст забыть о самом важном</string>
    <string name="desc_splash_first">Запишите всё, что нужно: \n дела, задачи, списки покупок</string>

    <plurals name="catalog_tasks_count">
        <item quantity="one">%d задача</item>
        <item quantity="few">%d задачи</item>
        <item quantity="many">%d задач</item>
        <item quantity="other">%d задач</item>
    </plurals>

    <plurals name="catalog_outdated_tasks_count">
        <item quantity="one">| %d просроченная</item>
        <item quantity="few">| %d просроченные</item>
        <item quantity="many">| %d просроченных</item>
        <item quantity="other">| %d просроченных</item>
    </plurals>
</resources>