<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    android:paddingStart="@dimen/create_edit_task_padding_horiz"
    android:paddingTop="@dimen/create_edit_task_padding_vert"
    android:paddingEnd="@dimen/create_edit_task_padding_horiz"
    android:paddingBottom="@dimen/create_edit_task_padding_vert">

    <LinearLayout
        android:id="@+id/main_bottom_sheet_area"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_anchorGravity="center">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:background="@null"
            android:hint="@string/create_task_name_default"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:background="@null"
            android:hint="@string/create_task_description_default"
            android:textSize="14sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/buttons_bottom_sheet_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteY="61dp">

            <LinearLayout
                android:id="@+id/date_pick_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="28dp"
                android:background="?attr/selectableItemBackground"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@+id/time_pick_button"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:clickable="false"
                    android:src="@drawable/ic_baseline_calendar_today_24" />

                <TextView
                    android:id="@+id/date_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:text="@string/task_card_date"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/time_pick_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="29dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@+id/catalog_pick_button"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/date_pick_button"
                tools:ignore="MissingConstraints">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:clickable="false"
                    android:src="@drawable/ic_baseline_access_time_24" />

                <TextView
                    android:id="@+id/time_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:text="@string/task_card_time"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/catalog_pick_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="29dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@+id/delete_button"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/time_pick_button"
                tools:ignore="MissingConstraints">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:clickable="false"
                    android:src="@drawable/ic_baseline_view_headline_24" />

                <TextView
                    android:id="@+id/catalog_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:text="@string/task_card_catalog"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/delete_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="29dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@+id/save_add_button"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/catalog_pick_button"
                tools:ignore="MissingConstraints">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:clickable="false"
                    android:src="@drawable/ic_baseline_delete_24" />

                <TextView
                    android:id="@+id/delete_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:text="@string/task_card_delete"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/save_add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/delete_button"
                tools:ignore="MissingConstraints">

                <ImageButton
                    android:id="@+id/checkButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:clickable="false"
                    android:src="@drawable/ic_baseline_check_circle_24" />

                <TextView
                    android:id="@+id/checkText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:text="@string/task_card_save_btn"
                    android:textColor="@color/green"
                    android:textSize="12sp" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>